@@ -11,6 +11,11 @@ The planning is managed by ``ir.cron`` records which store the method to call
 and the interval of time between calls. The method must be a class method of a
 :class:`~trytond.model.Model` which can be called without any parameters.
 
+.. note::
+
+   The timezone used for the schedule computations is
+   :attr:`~trytond.tools.timezone.SERVER`.
+
 To register a new method with the scheduler, you must extend the ``ir.cron``
 model and append the new method to the
 :attr:`~trytond.model.fields.Selection.selection` attribute of the ``method``
