@@ -9,6 +9,7 @@ from lxml import etree, objectify
 
 __version__ = "6.4.4"
 
+os.environ.setdefault('TRYTOND_TZ', os.environ.get('TZ', 'UTC'))
 os.environ['TZ'] = 'UTC'
 if hasattr(time, 'tzset'):
     time.tzset()
