@@ -1,6 +1,7 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
 import datetime
+import unittest
 from decimal import Decimal
 from unittest.mock import ANY, Mock, patch
 
@@ -9,9 +10,11 @@ from dateutil.relativedelta import relativedelta
 from trytond.config import config
 from trytond.pool import Pool
 from trytond.pyson import Eval, If, PYSONEncoder
+from trytond.tools import timezone
 from trytond.transaction import Transaction
 
-from .test_tryton import ModuleTestCase, with_transaction
+from .test_tryton import (
+    DB_NAME, USER, ModuleTestCase, activate_module, drop_db, with_transaction)
 
 
 class IrTestCase(ModuleTestCase):
@@ -383,4 +386,103 @@ class IrTestCase(ModuleTestCase):
                 })
 
 
-del ModuleTestCase
+class IrCronTestCase(unittest.TestCase):
+    "Test ir.cron features"
+
+    @classmethod
+    def setUpClass(cls):
+        drop_db()
+        activate_module(['ir'])
+        super().setUpClass()
+
+    @classmethod
+    def tearDownClass(cls):
+        super().tearDownClass()
+        drop_db()
+
+    def setUp(self):
+        server_tz = timezone.SERVER
+        timezone.SERVER = timezone.ZoneInfo('Canada/Eastern')
+        self.addCleanup(setattr, timezone, 'SERVER', server_tz)
+
+    def test_scheduling_non_utc(self):
+        "Test scheduling with a non UTC timezone"
+        pool = Pool(DB_NAME)
+        pool.init()
+        Cron = pool.get('ir.cron')
+
+        with Transaction().start(DB_NAME, USER):
+            cron = Cron()
+            cron.interval_number = 1
+            cron.interval_type = 'days'
+            cron.hour = 1
+            cron.method = 'ir.error|clean'
+            cron.save()
+
+        with patch('trytond.ir.cron.datetime') as dt:
+            # Quebec is UTC-5
+            dt.datetime.now.return_value = datetime.datetime(
+                2021, 12, 31, 5, 0)
+            Cron.run(DB_NAME)
+
+        with Transaction().start(DB_NAME, USER):
+            cron = Cron(cron.id)
+            self.assertEqual(
+                cron.next_call,
+                datetime.datetime(2022, 1, 1, 6, 0))
+
+    def test_scheduling_on_dst_change(self):
+        "Test scheduling while the DST change occurs"
+        pool = Pool(DB_NAME)
+        pool.init()
+        Cron = pool.get('ir.cron')
+
+        with Transaction().start(DB_NAME, USER):
+            cron = Cron()
+            cron.interval_number = 1
+            cron.interval_type = 'days'
+            cron.hour = 2
+            cron.method = 'ir.error|clean'
+            cron.save()
+
+        with patch('trytond.ir.cron.datetime') as dt:
+            # 2022-03-13 is the day of DST switch
+            # Quebec is UTC-4
+            dt.datetime.now.return_value = datetime.datetime(
+                2022, 3, 12, 6, 30)
+            Cron.run(DB_NAME)
+
+        with Transaction().start(DB_NAME, USER):
+            cron = Cron(cron.id)
+            self.assertEqual(
+                cron.next_call,
+                datetime.datetime(2022, 3, 13, 7, 30))
+
+    def test_scheduling_on_standard_time(self):
+        "Test scheduling while the calendar returns to the standard time"
+        pool = Pool(DB_NAME)
+        pool.init()
+        Cron = pool.get('ir.cron')
+
+        with Transaction().start(DB_NAME, USER):
+            cron = Cron()
+            cron.interval_number = 1
+            cron.interval_type = 'hours'
+            cron.method = 'ir.error|clean'
+            cron.save()
+
+        with patch('trytond.ir.cron.datetime') as dt:
+            # 2022-11-06 is the day of DST switch
+            # Quebec is UTC-5
+            dt.datetime.now.return_value = datetime.datetime(
+                2022, 11, 6, 7, 30)
+            Cron.run(DB_NAME)
+
+        with Transaction().start(DB_NAME, USER):
+            cron = Cron(cron.id)
+            self.assertEqual(
+                cron.next_call,
+                datetime.datetime(2022, 11, 6, 8, 30))
+
+
+del ModuleTestCase, IrCronTestCase
